welcome.lessons.welcome.traversal.diagonal.TraversalDiagonal.scala.error
Diagonal:26: error: ')' expected but '}' found.
				}
                                ^